# cit

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
cit/: cli.py
cit/commands/: branch.py  checkout.py  config.py  diff.py  doctor.py  log.py  stash.py  status.py
cit/core/: claude_files.py  config_manager.py  context_diff.py  keychain.py  lock.py  paths.py  pricing.py  profile.py  session_reader.py  state.py  wal.py
cit/models/: config.py  profile.py  session.py
cit/platform/: base.py  macos.py
docs/: DESIGN.md
docs/superpowers/plans/: 2026-03-31-context-first-repositioning.md
docs/superpowers/specs/: 2026-03-31-context-first-repositioning-design.md
tests/: conftest.py  test_branch.py  test_checkout.py  test_cli_help.py  test_config.py  test_config_manager.py  test_diff.py  test_doctor.py  test_keychain.py  test_locking.py  test_log.py  test_session_reader.py  test_small_units.py  test_stash.py  test_status.py  test_wal.py
