[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cit-cli"
version = "0.1.0"
description = "A git-style CLI for managing Claude work contexts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1",
  "rich>=13.9",
  "pydantic>=2.9",
  "tomli-w>=1.0",
]

[project.scripts]
cit = "cit.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-cov>=6.0",
]

[tool.setuptools.packages.find]
include = ["cit*"]

[tool.pytest.ini_options]
addopts = "-q --cov=cit --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
